# fastLDAP

./: .gitignore  Cargo.toml  README.md
benches/: ldap_benchmark.rs
src/: config.rs  connection.rs  error.rs  lib.rs  main.rs  server.rs
src/ber/: decoder.rs  encoder.rs  mod.rs  types.rs
src/filter/: parser.rs  types.rs
src/operations/: add.rs  bind.rs  delete.rs  mod.rs  moddn.rs  modify.rs  search.rs
src/protocol/: bind.rs  message.rs  mod.rs  modify.rs  result.rs  search.rs
src/store/: backend.rs  entry.rs  ldif.rs  memory.rs  mod.rs
src/utils/: logger.rs
